# Neonix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt  Neonix.hpp
Engine/Core/: Application.cpp  Application.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp
Engine/Graphics/: Camera.cpp  Camera.hpp  Layer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shapes.hpp  Texture.cpp  Texture.hpp
Engine/Utils/: FileUtils.cpp  FileUtils.hpp  ImageUtils.hpp
Resources/Shaders/: SimpleShader.frag  SimpleShader.vert
Sandbox/: CMakeLists.txt  CameraController.cpp  CameraController.hpp  Main.cpp  Sandbox.cpp  Sandbox.hpp  TestLayer.hpp
Source/: Main.cpp
Source/Core/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
Source/Graphics/: BatchRenderer2D.cpp  BatchRenderer2D.hpp  Renderable.cpp  Renderable.hpp  Renderable2D.cpp  Renderable2D.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  Shapes.hpp  SimpleRenderer.cpp  SimpleRenderer.hpp  SimpleRenderer2D.cpp  SimpleRenderer2D.hpp
Source/Utils/: FileUtils.hpp
